# android_proxy_mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/android_proxy_mcp/: __init__.py  server.py
src/android_proxy_mcp/android/: __init__.py  adb_client.py  cert_injector.py
src/android_proxy_mcp/cli/: __init__.py  start.py
src/android_proxy_mcp/core/: __init__.py  cdp_converter.py  models.py  sqlite_store.py
src/android_proxy_mcp/tools/: __init__.py  android_tools.py  proxy_tools.py  traffic_tools.py
src/android_proxy_mcp/utils/: __init__.py  cert_utils.py  encoding.py  mime_types.py
tests/: test_adb_client.py  test_cdp_converter.py  test_tools.py  test_utils.py
